--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "backend_NodeJs",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "01-intro.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
